hocr (0.3.1)

  * Dan Kenigsberg: Fix memory leak when openinig new picture
  * Dovix: add menu entry and a spec file for rpm creating

  -- Yaacov Zamir <kzamir@wall.co.il>  Sun, 14 Aug 2005 22:13
  
hocr (0.3.0)

  * close crash bug
  * add zoom in and out

  -- Yaacov Zamir <kzamir@wall.co.il>  Sun, 14 Aug 2005 22:13
   
hocr (0.2.0)

  * Initial release
  * Add spell check
  * Add patch by Yuval Tanny: make gui interface more usable by coloring the unreadble 
    signs and putting picture and text on the same window.

  -- Yaacov Zamir <kzamir@wall.co.il>  Sun, 14 Aug 2005 22:13