@@ -1,5 +1,5 @@
 /***************************************************************************
- *            main.c
+ *            hocr-gui.c
  *
  *  Fri Aug 12 20:31:48 2005
  *  Copyright  2005  Yaacov Zamir
