@@ -1,9 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = \
-	test1.jpg \
-	test2.jpg
-
 hocrdocdir = ${prefix}/share/doc/hocr/tests
 hocrdoc_DATA = \
 	test1.jpg \
